[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/Arrow/4.png" type="Texture" id=1]
[ext_resource path="res://Elements/Arrow/Arrow_Trasition/Arrow_Transition.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 250.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 34, 34 )

[node name="Arrow_Transition" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 1 )

[node name="DetectingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectingArea"]
shape = SubResource( 2 )

[node name="ClickArea" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource( 3 )

[connection signal="body_entered" from="DetectingArea" to="." method="_on_DetectingArea_body_entered"]
[connection signal="body_exited" from="DetectingArea" to="." method="_on_DetectingArea_body_exited"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
